# conflux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: general.yml
src/: lib.rs  testing.rs  tests.rs
src/core/: errors.rs  mod.rs  solver.rs  state.rs
src/core/math/: add.rs  add_ndarray.rs  div.rs  div_ndarray.rs  dot_ndarray.rs  empty_ndarray.rs  eye_ndarray.rs  holds_nan_ndarray.rs  into_2d_ndarray.rs  into_f64.rs  mod.rs  mul.rs  mul_ndarray.rs  norm.rs  norm_ndarray.rs  stack_ndarray.rs  sub.rs  sub_ndarray.rs  transpose_ndarray.rs  zeros.rs  zeros_ndarray.rs
src/core/math/nalgebra_math/: add.rs  div.rs  dot.rs  empty.rs  eye.rs  holds_nan.rs  into_2d.rs  mod.rs  mul.rs  norm.rs  stack.rs  sub.rs  transpose.rs  zeros.rs
src/core/math/ndarray_math/: add.rs  div.rs  dot.rs  eye.rs  holds_nan.rs  into_2d.rs  mod.rs  mul.rs  norm.rs  stack.rs  sub.rs  transpose.rs  zeros.rs
src/solvers/: mod.rs
src/solvers/anderson/: andersontype1.rs  mod.rs
src/solvers/linear/: linear.rs  linear_mixer.rs  mod.rs
tests/: mod.rs  nalgebra.rs  ndarray.rs
