[package]
name = "node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1.11"
miette = { version = "3.2.0", features = ["fancy"] }
ndarray = { version = "0.15.3", features =["serde"] }
num = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
