[package]
name = "conflux"
authors = ["Christopher Gubbin <c.r.gubbin@soton.ac.uk>"]
repository = "https://github.com/cgubbin/conflux"
description = "Fixed-point optimization in rust"
version = "0.1.0"
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["science"]
keywords = ["optimization", "math", "physics", "science"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1.11"
miette = { version = "3.2.0", features = ["fancy"] }
ndarray = { version = "0.15.3", features =["serde"] }
num = "0.4.0"
num-complex = "0.4.0"
paste = "1.0.5"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"

[badges]
maintenance = { status = "actively-developed" }