[package]
name = "conflux"
authors = ["Christopher Gubbin <c.r.gubbin@soton.ac.uk>"]
repository = "https://github.com/cgubbin/conflux"
description = "Fixed-point optimization in rust"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["science"]
keywords = ["optimization", "math", "physics", "science"]
exclude = ["/.github"]

[profile.release]
debug = 1
incremental = true
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1.11"
miette = { version = "3.2.0", features = ["fancy"] }
nalgebra = { version = "0.29.0", features = ["serde-serialize"], optional = true }
ndarray = { version = "0.15.3", features =["serde"], optional = true  }
num = "0.4.0"
num-complex = "0.4.0"
num-traits = "0.2.14"
paste = "1.0.5"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
tracing = "0.1.29"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["ndarray", "nalgebra"]

[dev-dependencies]
rand = "0.8.5"
